examples/test/testpolicy5383.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5383
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key2: value36
      key30: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value37
      podSelector:
        matchLabels:
          key44: value21
          key19: value17
